--- a/MyCompany/Views/Shared/HeaderPartial.cshtml
+++ b/MyCompany/Views/Shared/HeaderPartial.cshtml
@@ -4,13 +4,13 @@
             <div class="col-12">
 
                 <header id="header">
-                    <h1><a href="index.html" id="logo">Actionarii</a></h1>
+                    <h1><a href="index.html" id="logo">SHAREHOLDERS</a></h1>
                     <nav id="nav">
-                        <a asp-controller="Person" asp-action="Index">Persoanele</a>
-                        <a href="twocolumn1.html">Two Column #1</a>
-                        <a href="twocolumn2.html" class="current-page-item">Two Column #2</a>
-                        <a href="onecolumn.html">One Column</a>
-                        <a href="threecolumn.html">Three Column</a>
+                        <a asp-controller="Person" asp-action="Index">All Persons</a>
+                        <a href="twocolumn1.html">Individual</a>
+                        <a href="twocolumn2.html" class="current-page-item">Entities</a>
+                        <a href="onecolumn.html">Dividends</a>
+                        <a href="threecolumn.html">Information on shareholders</a>
                     </nav>
                 </header>
 
